--- a/src/components/Glyph/Composite/Form/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/styles.module.scss
@@ -1,11 +1,20 @@
 .form {
   background-color: white;
   color: black;
-  left: 0px;
+  right: 0px;
+  height: 100%;
   position: absolute;
   top: 0px;
+  max-width: 360px;
+  width: 100%;
 
   &--btn-instance {
+    background: black;
+    border: none;
+    box-shadow: none;
+    color: white;
+    height: 40px;
     font-family: inherit;
+    width: 40px;
   }
 }
