--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
 }
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Roboto Mono", monospace, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -19,10 +19,15 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --primary-color: #222;
+  --secondary-color: #FFF;
+
+  --primary-bg-back: #d7d7d7dd;
 }
 
 body {
-  background-color: #777;
+  background-color: var(--primary-bg-back);
   height: 100dvh;
   margin: 0;
   position: relative;
