--- a/src/components/Glyph/Composite/Form/Composite/Rotation/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/Composite/Rotation/styles.module.scss
@@ -1,7 +1,7 @@
 .rotation {
-  height: 44px;
+  height: 40px;
   position: relative;
-  width: 44px;
+  width: 40px;
 
   &--grid,
   &--glyph {
@@ -17,7 +17,6 @@
     &:before,
     &:after {
       background: transparent;
-      
       content: '';
       left: 50%;
       opacity: 0.2;
@@ -29,11 +28,11 @@
     &:before {
       border-bottom: 1px dashed var(--primary-color);
       height: 1px;
-      width: 100%;
+      width: calc(100% - 10px);
     }
 
     &:after {
-      height: 100%;
+      height: calc(100% - 10px);
       border-left: 1px dashed var(--primary-color);
       width: 1px;
     }
@@ -68,35 +67,10 @@
   }
 
   &--progress {
-    &--pie {
-      border-radius: 50%;
-      background: linear-gradient(to right, var(--primary-color) 50%, var(--primary-bg-back) 50%);
-      overflow: hidden;
-      height: 30px;
-      width: 30px;
-      left: 50%;
-      opacity: 0.3;
-      position: absolute;
-      top: 50%;
-      transform: translate3d(-50%, -50%, 0px) scaleX(-1);
-      z-index: 0;
-
-      &--bg {
-        border-radius: 0 100% 100% 0 / 50%;
-        display: block;
-        height: 100%;
-        margin-left: 50%;
-        transform-origin: left;
-
-        &[data-pie='left'] {
-          background: var(--primary-color);
-        }
-        
-        &[data-pie='right'] {
-          background: var(--primary-bg-back);
-        }
-      }
-
-    }
+    align-content: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
   }
 }
