--- a/src/components/Form/RangeSlider/styles.module.scss
+++ b/src/components/Form/RangeSlider/styles.module.scss
@@ -1,5 +1,5 @@
 .range-slider {
-  padding: 40px 0 0px;
+  padding: 46px 30px 20px;
   position: relative;
   width: 100%;
 
@@ -7,6 +7,24 @@
     display: flex;
     justify-content: space-between;
     letter-spacing: -0.05rem;
+    left: 50%;
+    position: absolute;
+    pointer-events: none;
+    top: 0%;
+    transform: translate3d(-50%, -50%, 0px);
+    width: calc(100% + 50px);
+
+    &--value {
+      color: var(--primary-color);
+      opacity: 0.5;
+      font-size: 10px;
+    }
+  }
+
+  &--wrapper {
+    display: flex;
+    padding: 0px;
+    position: relative;
     width: 100%;
   }
 
@@ -19,8 +37,8 @@
     position: absolute;
     pointer-events: none;
     text-align: center;
-    top: 10px;
-    transform: translate3d(-50%, 0px, 0px);
+    transform: translate3d(-50%, calc(-100% - 16px), 0px);
+    top: 0px;
     width: 40px;
 
     &:before {
