--- a/src/components/Glyph/Composite/Form/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/styles.module.scss
@@ -5,19 +5,59 @@
   height: 100%;
   overflow: hidden;
   overflow-y: auto;
+  padding: 0px 0px 40px;
   position: absolute;
   top: 0px;
   max-width: 350px;
   width: 100%;
 
-  &--btn-instance {
-    background: black;
-    border: none;
-    box-shadow: none;
-    color: white;
-    height: 40px;
-    font-family: inherit;
-    width: 40px;
+  &--axes {
+    display: flex;
+    flex-flow: column wrap;
+    position: relative;
+    width: 100%;
+
+    &--instance {
+      background: var(--primary-color);
+      border: 2px solid var(--primary-color);
+      box-shadow: none;
+      height: 40px;
+      color: var(--secondary-color);
+      font-family: inherit;
+      font-size: 20px;
+      transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+      min-width: 40px;
+
+      &:hover {
+        background: var(--secondary-color);
+        color: var(--primary-color);
+      }
+    }
+
+    .form--group {
+      display: flex;
+      gap: 2px;
+      overflow: hidden;
+      overflow-x: auto;
+      padding-top: 0px;
+    }
+
+    &:before,
+    &:after {
+      background: var(--secondary-color);
+      content: '';
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 20px;
+      z-index: 2;
+    }
+
+    &:after {
+      left: initial;
+      right: 0;
+    }
   }
 
   &--group {
