--- a/src/components/Form/RangeSlider/styles.module.scss
+++ b/src/components/Form/RangeSlider/styles.module.scss
@@ -15,7 +15,7 @@
     width: calc(100% + 50px);
 
     &--value {
-      color: var(--primary-color);
+      color: var(--secondary-color);
       opacity: 0.5;
       font-size: 10px;
     }
@@ -31,15 +31,15 @@
   &--value-marker {
     background: var(--primary-color);
     color: var(--secondary-color);
-    font-size: 10px;
+    font-size: 8px;
     letter-spacing: -0.05rem;
-    padding: 2px 4px;
+    padding: 2px 8px;
     position: absolute;
     pointer-events: none;
     text-align: center;
     transform: translate3d(-50%, calc(-100% - 16px), 0px);
     top: 0px;
-    width: 30px;
+    width: fit-content;
 
     &:before {
       background: var(--primary-color);
