--- a/src/components/Glyph/Composite/Form/Composite/Frames/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/Composite/Frames/styles.module.scss
@@ -1,9 +1,12 @@
 .frames {
   display: flex;
+  color: var(--secondary-color);
   flex-flow: column wrap;
   width: 100%;
 
-  &--time-line {
-
+  &--wrapper {
+    display: flex;
+    position: relative;
+    width: 100%;
   }
 }
