--- a/src/components/Glyph/Composite/Form/Composite/Frames/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/Composite/Frames/styles.module.scss
@@ -4,8 +4,62 @@
   flex-flow: column wrap;
   width: 100%;
 
+  &--frame {
+    background: var(--primary-bg-back);
+    color: var(--primary-color);
+    display: flex;
+    position: relative;
+    width: 50%;
+
+    &--options {
+      right: 10px;
+      position: absolute;
+      top: 0px;
+    }
+  }
+
+  &--glyph {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    width: 100%;
+
+    &--pos {
+      bottom: 0;
+      font-size: 8px;
+      left: 0;
+      padding: 8px 10px;
+      pointer-events: none;
+      position: absolute;
+      width: 100%;
+
+      p {
+        color: var(--bg-panel);
+        display: flex;
+        line-height: 0.8rem;
+
+        span {
+          font-weight: 700;
+        }
+      }
+    }
+
+    &--text {
+      background: transparent;
+      border: none;
+      box-shadow: none;
+      color: var(--bg-panel);
+      font-size: 32px;
+      height: 100%;
+      text-align: center;
+      width: fit-content;
+    }
+  }
+
   &--wrapper {
     display: flex;
+    padding: 0px 20px 20px;
     position: relative;
     width: 100%;
   }
