--- a/src/components/Glyph/Composite/Form/Composite/Frames/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/Composite/Frames/styles.module.scss
@@ -14,7 +14,30 @@
     &--options {
       right: 10px;
       position: absolute;
+      padding: 0;
       top: 0px;
+    }
+
+    &[data-active="true"] {
+      background-color: var(--primary-color);
+      color: var(--secondary-color);
+
+      .frames {
+        &--glyph {
+          &--pos {
+            p {
+              color: var(--primary-bg-back);
+            }
+          }
+          &--text {
+            color: var(--primary-bg-back);
+          }
+        }
+
+        &--frame--options {
+          filter: invert(1);
+        }
+      }
     }
   }
 
@@ -22,14 +45,15 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    padding: 20px 0;
+    padding: 0;
+    position: relative;
     width: 100%;
 
     &--pos {
       bottom: 0;
       font-size: 8px;
       left: 0;
-      padding: 8px 10px;
+      padding: 8px 20px;
       pointer-events: none;
       position: absolute;
       width: 100%;
@@ -51,15 +75,15 @@
       box-shadow: none;
       color: var(--bg-panel);
       font-size: 32px;
-      height: 100%;
+      height: 60px;
       text-align: center;
-      width: fit-content;
+      width: 100%;
     }
   }
 
   &--wrapper {
     display: flex;
-    padding: 0px 20px 20px;
+    padding: 0px 0px 20px;
     position: relative;
     width: 100%;
   }
