--- a/src/components/Glyph/Composite/Form/Composite/Frame/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/Composite/Frame/styles.module.scss
@@ -25,6 +25,7 @@
       position: relative;
       text-align: center;
       width: 200px;
+      user-select: none;
 
       > span {
         background: transparent;
