--- a/src/components/Glyph/Composite/Form/Composite/Frames/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/Composite/Frames/styles.module.scss
@@ -15,6 +15,7 @@
       right: 10px;
       position: absolute;
       padding: 0;
+      pointer-events: none;
       top: 0px;
     }
 
@@ -78,6 +79,7 @@
       height: 60px;
       text-align: center;
       width: 100%;
+      user-select: none;
     }
   }
 
