--- a/src/index.scss
+++ b/src/index.scss
@@ -12,8 +12,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #d7d7d7dd;
+  background-color: #38383e;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,7 +37,7 @@
 }
 
 body {
-  background-color: var(--bg-main);
+  background-color: var(--bg-panel);
   height: 100dvh;
   margin: 0;
   position: relative;
@@ -110,21 +110,21 @@ input[type='range'] {
 input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none; 
-  height: 14px;
-  width: 14px;
+  height: 16px;
+  width: 20px;
   background-color: var(--primary-color);
-  border-radius: 50%;
+  border-radius: 4px;
   border: none;
   transition: .2s ease-in-out;
 }
 
 input[type='range']::-moz-range-thumb {
   background-color: var(--primary-color);
-  border-radius: 50%;
+  border-radius: 4px;
   border: none;
-  height: 15px;
+  height: 16px;
   transition: .2s ease-in-out;
-  width: 15px;
+  width: 20px;
 }
 
 input[type='color'] {
