--- a/src/components/Form/Letter/styles.module.scss
+++ b/src/components/Form/Letter/styles.module.scss
@@ -1,7 +1,6 @@
 .form--letter {
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translate3d(-50%, -50%, 0px);
+  display: flex;
+  flex-flow: column wrap;
+  position: relative;
   width: 400px;
 }
