--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,7 @@
 
   /* Fondos */
   --bg-main: #2f2e2e;
-  --bg-panel: #1a86eb;
+  --bg-panel: #3151AA;
   --border-subtle: #404040;
   --bg-hover-active: #4D4D4D;
 
