--- a/src/components/Glyph/Composite/Form/Composite/Frame/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/Composite/Frame/styles.module.scss
@@ -1,175 +1,42 @@
 .frame {
-  align-items: center;
+  align-items: flex-start;
   background: transparent;
   display: flex;
+  flex-flow: row wrap;
+  gap: 0px;
   justify-content: center;
-  height: 320px;
+  left: 100%;
   margin: 0;
-  position: relative;
+  padding: 8px;
+  position: absolute;
+  top: 0px;
   width: 320px;
 
-  &--current {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    position: relative;
-    justify-content: center;
-    width: 100%;
-    
-    &--glyph {
-      align-items: center;
-      display: flex;
-      height: 200px;
-      justify-content: center;
-      font-size: 124px;
-      position: relative;
-      text-align: center;
-      width: 200px;
-      user-select: none;
+  background: transparent;
+  border: 1px dashed transparent;
+  background-size: 4px 4px;
+  background-image: repeating-linear-gradient(
+    -45deg,
+    var(--text-main) 0,
+    var(--text-main) 1px,
+    transparent 0,
+    transparent 50%
+  );
 
-      > span {
-        background: transparent;
-        height: 100%;
-        left: 0;
-        position: absolute;
-        pointer-events: none;
-        top: 0;
-        width: 100%;
+  &--item {
+    background: transparent;
+    border: none;
+    display: inline-flex;
+    padding: 2px;
 
-        &:after,
-        &:before {
-          background: var(--bg-panel);
-          height: 40px;
-          content: '';
-          position: absolute;
-          width: 4px;
-        }
+    &[data-active="true"] {
+      background-color: var(--bg-panel);
 
-        &:first-child {
-          &:after,
-          &:before {
-            left: -3px;
-            top: -1px;
-          }
-
-          &:before {
-            transform: rotate(90deg) translate(-20px, -18px);
-          }
-        }
-
-        &:nth-child(2) {
-          &:after,
-          &:before {
-            right: -3px;
-            top: -1px;
-          }
-
-          &:before {
-            transform: rotate(-90deg) translate(20px, -18px);
-          }
-        }
-
-        &:nth-child(3) {
-          &:after,
-          &:before {
-            right: -3px;
-            bottom: -1px;
-          }
-
-          &:before {
-            transform: rotate(-90deg) translate(-20px, -18px);
-          }
-        }
-
-        &:nth-child(4) {
-          &:after,
-          &:before {
-            bottom: -1px;
-            left: -3px;
-          }
-
-          &:before {
-            transform: rotate(-90deg) translate(-20px, 18px);
-          }
+      svg {
+        path {
+          // fill: var(--bg-panel);
         }
       }
-
-      &:before {
-        border: 1px solid var(--bg-panel);
-        content: '';
-        left: 50%;
-        height: 200px;
-        position: absolute;
-        transform: translate3d(-50%, -50%, 0px);
-        top: 50%;
-        width: 200px;
-      }
     }
-  }
-
-  &--option {
-    color: var(--bg-panel);
-    letter-spacing: -0.05rem;
-    position: absolute;
-
-    &--description {
-      display: flex;
-      gap: 8px;
-      line-height: 1rem;
-      letter-spacing: -0.05rem;
-    }
-
-    &[data-type="color"] {
-      right: 24px;
-      bottom: 24px;
-
-      input {
-        height: 30px;
-        width: 30px;
-      }
-    }
-
-    &[data-type="rotation"] {
-      right: 20px;
-      top: 20px;
-    }
-
-    &[data-type="position"] {
-      bottom: 30px;
-      left: 30px;
-
-      p {
-        font-size: 12px;
-      }
-    }
-
-    &[data-type="char"] {
-      left: 30px;
-      top: 30px;
-    }
-  }
-
-  &:after,
-  &:before {
-    content: '';
-    position: absolute;
-    pointer-events: none;
-  }
-
-  &:after {
-    border: 1px solid var(--bg-panel);
-    left: 50%;
-    height: calc(100% - 40px);
-    transform: translate3d(-50%, -50%, 0px);
-    top: 50%;
-    width: calc(100% - 40px);
-  }
-  
-  &:before {
-    background: var(--primary-bg-back);
-    height: 100%;
-    left: 0;
-    top: 0;
-    width: 100%;
   }
 }
