--- a/src/components/Glyph/Composite/Form/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/styles.module.scss
@@ -9,6 +9,7 @@
   position: absolute;
   top: 0px;
   max-width: 320px;
+  transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
   transform-origin: left top;
   width: 100%;
 
@@ -19,8 +20,11 @@
     width: 100%;
 
     &--instance {
-      background: var(--primary-color);
-      border: 2px solid var(--primary-color);
+      background: transparent;
+      border: 1px dashed var(--text-main);;
+      background-size: 4px 4px;
+      background-image: none;
+      color: var(--text-main);
       box-shadow: none;
       height: 40px;
       color: var(--secondary-color);
@@ -29,9 +33,15 @@
       transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
       min-width: 40px;
 
-      &:hover {
-        background: var(--secondary-color);
-        color: var(--primary-color);
+      &[data-active="true"] {
+        border-color: transparent;
+        background-image: repeating-linear-gradient(
+          -45deg,
+          var(--text-main) 0,
+          var(--text-main) 1px,
+          transparent 0,
+          transparent 50%
+        );
       }
     }
 
@@ -45,7 +55,7 @@
   }
 
   &--group {
-    padding: 10px 20px;
+    padding: 10px 0px;
     width: 100%;
 
     &--dash {
@@ -63,12 +73,13 @@
       background: transparent;
       color: var(--text-main);
       display: flex;
-      font-size: 14px;
+      font-size: 12px;
       font-weight: 500;
       line-height: 1rem;
       padding: 4px 20px 4px 0px;
       text-transform: uppercase;
       width: fit-content;
+      user-select: none;
     }
 
     &--title {
