--- a/src/components/Glyph/Composite/Form/Composite/Frame/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/Composite/Frame/styles.module.scss
@@ -14,7 +14,7 @@
 
   background: transparent;
   border: 1px dashed transparent;
-  background-size: 4px 4px;
+  background-size: 10px 10px;
   background-image: repeating-linear-gradient(
     -45deg,
     var(--text-main) 0,
@@ -31,12 +31,7 @@
 
     &[data-active="true"] {
       background-color: var(--bg-panel);
-
-      svg {
-        path {
-          // fill: var(--bg-panel);
-        }
-      }
+      color: var(--bg-panel);
     }
   }
 }
