--- a/src/components/Glyph/Composite/Form/styles.module.scss
+++ b/src/components/Glyph/Composite/Form/styles.module.scss
@@ -10,6 +10,7 @@
   top: 0px;
   max-width: 320px;
   transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+  pointer-events: none;
   transform-origin: left top;
   width: 100%;
 
@@ -130,5 +131,10 @@
       justify-content: flex-start;
       padding: 20px 0px 0px;
     }
+  }
+
+  button,
+  input {
+    pointer-events: auto;
   }
 }
