--- a/src/components/GlyphSelector/Composite/styles.module.scss
+++ b/src/components/GlyphSelector/Composite/styles.module.scss
@@ -1,9 +1,9 @@
 .tabs {
-  width: 100%;
-  max-width: 800px;
   border-radius: 8px;
+  display: flex;
+  flex-flow: column wrap;
   overflow: hidden;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  width: 100%;
 
   &--head {
     padding: 4px;
@@ -11,30 +11,35 @@
     background-color: transparent;
     cursor: pointer;
     font-size: 16px;
-    color: #555;
+    color: #007bff;
     transition: all 0.3s ease;
     flex-grow: 1;
     text-align: center;
 
     &[data-active] {
-      color: #007bff;
       border-bottom-color: #007bff;
       background-color: #fff;
       font-weight: bold;
     }
   }
 
+  &--list {
+    display: flex;
+    flex-flow: column wrap;
+    width: fit-content;
+  }
+
   &--panel {
     &--grid {
       display: grid;
       gap: 1px;
-      grid-template-columns: repeat(8, 30px);
-      grid-auto-rows: 30px;
+      grid-template-columns: repeat(8, 34px);
+      grid-auto-rows: 34px;
       width: auto;
               
       > button {
         background-color: transparent;
-        color: white;
+        color: var(--bg-panel);
         display: flex;
         justify-content: center;
         align-items: center;
