--- a/src/components/Form/Glyph/styles.module.scss
+++ b/src/components/Form/Glyph/styles.module.scss
@@ -39,7 +39,6 @@
         width: 40px;
 
         p {
-          font-size: 12px;
           overflow: hidden;
           text-overflow: ellipsis;
           white-space: nowrap;
@@ -66,26 +65,26 @@
 
     &--instance {
       background: transparent;
-      border: 1px solid var(--text-main);
+      border: 1px dashed var(--text-main);
       background-size: 10px 10px;
-      background-image: none;
+      background-image: repeating-linear-gradient(
+        -45deg,
+        var(--text-main) 0,
+        var(--text-main) 1px,
+        transparent 0,
+        transparent 50%
+      );
       color: var(--text-main);
       box-shadow: none;
-      height: 40px;
+      height: 34px;
       color: var(--secondary-color);
       font-family: inherit;
       font-size: 20px;
       transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
-      min-width: 40px;
+      min-width: 34px;
 
       &[data-active="true"] {
-        background-image: repeating-linear-gradient(
-          -45deg,
-          var(--text-main) 0,
-          var(--text-main) 1px,
-          transparent 0,
-          transparent 50%
-        );
+        background-image: none;
       }
     }
 
@@ -93,7 +92,7 @@
       display: flex;
       gap: 2px;
       flex-flow: row wrap;
-      width: 200px;
+      width: 180px;
     }
 
     .form--group {
