--- a/src/components/Glyph/Composite/Info/style.module.scss
+++ b/src/components/Glyph/Composite/Info/style.module.scss
@@ -9,39 +9,99 @@
   transform: translate3d(0px, calc(-100% - 36px), 0px);
   width: auto;
 
-  &--contours {
+  &--controls {
     display: flex;
+    gap: 4px;
+    flex-direction: column;
+    width: fit-content;
+    
+    button {
+      align-content: center;
+      background: transparent;
+      border: none;
+      box-shadow: none;
+      color: var(--text-main);
+      display: flex;
+      height: 40px;
+      flex-flow: row wrap;
+      justify-content: center;
+      outline: none;
+      position: relative;
+      width: 40px;
+
+      &:before,
+      &:after {
+        background: var(--text-main);
+        content: '';
+        height: 1px;
+        left: 50%;
+        opacity: 1;
+        position: absolute;
+        top: 50%;
+        transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+        width: 80%;
+      }
+
+      &:before {
+        transform: translate3d(-50%, -50%, 0px) rotate(45deg);
+      }
+      
+      &:after {
+        transform: translate3d(-50%, -50%, 0px) rotate(-45deg);
+        transition-delay: 0.2s;
+      }
+
+      &[data-active="true"] {
+        &:before,
+        &:after {
+          height: 3px;
+          width: 0;
+        }
+      }
+    }
+  }
+
+  &--contours {
+    display: none; // flex;
     flex-flow: row wrap;
     gap: 8px;
-    max-height: 200px;
+    max-height: 30dvh;
     overflow: hidden;
     overflow-y: auto;
+    margin-top: 12px;
     padding: 0px 10px 0px 20px;
     scrollbar-gutter: stable;
     width: 100%;
 
     &--item {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       gap: 8px;
       text-transform: none;
       width: 100%;
 
-      span {
+      span,
+      strong {
         display: flex;
         flex-flow: row nowrap;
-        padding: 0 8px;
+        padding: 0 4px;
+        white-space: nowrap;
+        width: 70px;
       }
     }
 
     &--wrapper {
+      bottom: 0px;
       display: flex;
-      gap: 20px;
+      gap: 4px;
       flex-flow: row wrap;
+      left: 100%;
+      padding: 0 0 0 12px;
+      position: absolute;
     }
 
     &::-webkit-scrollbar {
-      width: 6px;
+      width: 4px;
     }
 
     &::-webkit-scrollbar-track {
