--- a/src/components/GlyphSelector/Composite/styles.module.scss
+++ b/src/components/GlyphSelector/Composite/styles.module.scss
@@ -1,6 +1,6 @@
 .tabs {
-  border-radius: 8px;
   display: flex;
+  gap: 12px;
   flex-flow: column wrap;
   overflow: hidden;
   width: 100%;
@@ -11,40 +11,76 @@
     background-color: transparent;
     cursor: pointer;
     font-size: 16px;
-    color: #007bff;
+    color: #cbdaea;
     transition: all 0.3s ease;
     flex-grow: 1;
     text-align: center;
+    background-size: 8px 8px;
+    background-image: repeating-linear-gradient(
+      -45deg,
+      rgba(255,255,255,0.4) 0,
+      rgba(255,255,255,0.4) 0.1px,
+      transparent 0,
+      transparent 50%
+    );
+    border: none;
 
-    &[data-active] {
-      border-bottom-color: #007bff;
-      background-color: #fff;
+    &[data-active="true"] {
+      background-image: none;
       font-weight: bold;
     }
   }
 
   &--list {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
+    gap: 12px;
     width: fit-content;
+
+    button {
+      color: #FFF;
+      font-size: 12px;
+      padding: 12px 10px;
+    }
   }
 
   &--panel {
+    position: relative;
+
     &--grid {
       display: grid;
       gap: 1px;
-      grid-template-columns: repeat(8, 34px);
-      grid-auto-rows: 34px;
+      grid-template-columns: repeat(12, 40px);
+      grid-auto-rows: 40px;
       width: auto;
               
       > button {
-        background-color: transparent;
-        color: var(--bg-panel);
-        display: flex;
-        justify-content: center;
+        background-size: 8px 8px;
+        background-image: repeating-linear-gradient(
+          -45deg,
+          rgba(255,255,255,0.4) 0,
+          rgba(255,255,255,0.4) 0.1px,
+          transparent 0,
+          transparent 50%
+        );
         align-items: center;
-        font-size: 0.8em;
-        border: 1px solid rgba(0, 0, 0, 0.1); /* Borde ligero para cada celda */
+        background-color: transparent;
+        border: none;
+        color: #FFF;
+        display: flex;
+        font-weight: 600;
+        height: 40px;
+        justify-content: center;
+
+        > p {
+          font-size: 14px;
+          font-weight: 600;
+        }
+
+        &[data-active="true"] {
+          border: 1px dashed var(--text-main);
+          background-image: none;
+        }
       }
     }
   }
